fix: tablet projects layout changed to 50% 50% (from 1fr 1f) due to uneven project arcticle resizing

--- a/src/styles/pages/work.sass
+++ b/src/styles/pages/work.sass
@@ -17,7 +17,7 @@
 
     // TABLET
     @media screen and (min-width: $tablet) and (max-width: $desktop - 1) and (min-height: $tablet)
-        grid-template-columns: 1fr 1fr
+        grid-template-columns: 50% 50%
 
     // DESKTOP
     @media screen and (min-width: $desktop) and (max-width: $widescreen - 1)
